# houio

./: .gitignore  CMakeLists.txt  houio.pro
cmake/: houio-config.cmake
include/houio/: Attribute.h  Field.h  Geometry.h  HouGeo.h  HouGeoAdapter.h  HouGeoIO.h  HouScene.h  ImportHoudini.h  json.h  types.h
include/houio/math/: BoundingBox2.h  BoundingBox3.h  Color.h  Math.h  Matrix22.h  Matrix22Algo.h  Matrix33.h  Matrix33Algo.h  Matrix44.h  Matrix44Algo.h  RNG.h  Ray3.h  Vec2.h  Vec2Algo.h  Vec3.h  Vec3Algo.h  Vec4.h  Vec4Algo.h
include/ttl/: collection.hpp  config.hpp  data_holder.hpp  equivalent_types.hpp  exception.hpp  macro_assert.hpp  macro_misc.hpp  macro_params.hpp  macro_repeat.hpp  selector.hpp
include/ttl/detail/: macro_counter.hpp
include/ttl/flg/: flags.hpp
include/ttl/func/: bind.hpp  function.hpp  named_params_function.hpp
include/ttl/mem/: memory.hpp
include/ttl/meta/: is_pointer.hpp  is_reference.hpp  is_same.hpp  typelist.hpp
include/ttl/sccs/: sccs.hpp
include/ttl/sccs/detail/: add_action.hpp  add_agent.hpp  add_port.hpp  add_repeat.hpp  add_stop.hpp  node_types.hpp  runtime_types.hpp
include/ttl/sig/: signal.hpp
include/ttl/tup/: tuple.hpp
include/ttl/var/: variant.hpp
scene_exporter/: binary_json.py  exportScene.py  fpreal16.py
src/: Attribute.cpp  Field.cpp  Geometry.cpp  HouGeo.cpp  HouGeoAdapter.cpp  HouGeoIO.cpp  HouScene.cpp  ImportHoudini.cpp  json.cpp
src/math/: Color.cpp  Math.cpp
src/math/Half/: half.cpp
tests/: CMakeLists.txt  example_readwrite.cpp  main.cpp  test_box.bgeo  test_box.geo  test_volume.bgeo  test_volume.geo  tests.hipnc
